40. Criação de CRUD com filtro, ordenação e paginação

--- a/dev-jsf/src/main/webapp/privado/grupo/listar.xhtml
+++ b/dev-jsf/src/main/webapp/privado/grupo/listar.xhtml
@@ -10,9 +10,44 @@
 		<h:messages />
 		<h:commandLink action="Novo Registro" value="#{controleGrupo.novo()}" />
 		
+		<h:panelGrid columns="6"> 
+			<h:selectOneMenu value="#{controleGrupo.dao.ordem}">
+				<f:selectItem itemLabel="ID" itemValue="id"/>
+				<f:selectItem itemLabel="Nome" itemValue="nome"/>
+				<f:ajax execute="@form" render="@form" />
+			</h:selectOneMenu>
+			
+			<h:outputLabel value="Filtro: " />
+			<h:outputText value="#{controleGrupo.dao.filtro}" >
+				<f:ajax execute="@form" render="@form" event="keyup" />
+			</h:outputText>
+			
+			<h:outputLabel value="Maximo objetos: " />
+			<h:outputText value="#{controleGrupo.dao.maximosObjetos}" size="3">
+				<f:ajax execute="@form" render="@form" event="keyup" />
+			</h:outputText>
+		</h:panelGrid>
+		
 		<h:dataTable value="#{controleGrupo.dao.listarTodos()}" var="obj"
 					 frame="box" rules="all" cellpadding="3">
-		
+			<f:facet name="header">Listagem de Grupos</f:facet>		
+			<f:facet name="footer">
+				<div align="center">
+					<h:outputLabel value="#{controleGrupo.dao.mensagemNavegacao}" /><br />
+					<h:commandButton action="#{controleGrupo.dao.primeiro()}" value="Primeiro">
+						<f:ajax execute="@form" render="@form" />
+					</h:commandButton>
+					<h:commandButton action="#{controleGrupo.dao.anterior()}" value="Anterior">
+						<f:ajax execute="@form" render="@form" />
+					</h:commandButton>
+					<h:commandButton action="#{controleGrupo.dao.proximo()}" value="Proximo">
+						<f:ajax execute="@form" render="@form" />
+					</h:commandButton>
+					<h:commandButton action="#{controleGrupo.dao.ultimo()}" value="Ultimo">
+						<f:ajax execute="@form" render="@form" />
+					</h:commandButton>
+				</div>
+			</f:facet>		
 			<h:column>
 				<f:facet name="header">ID</f:facet>
 				#{obj.id}
