--- a/dev-jsf/src/main/webapp/privado/projeto/listar.xhtml
+++ b/dev-jsf/src/main/webapp/privado/projeto/listar.xhtml
@@ -7,7 +7,7 @@
 <h:head></h:head> 
 <body> 
 	<h:form>
-		<h:commandLink action="/index?faces-redirect=true" value="Inicio" />
+		<h:commandLink action="/index?faces-redirect=true" value="Inicio" /><br />
 		<h:messages />
 		
 		<h:dataTable value="#{controleProjeto.dao.listarTodos()}" var="obj"	
