--- a/dev-jsf/src/main/webapp/index.xhtml
+++ b/dev-jsf/src/main/webapp/index.xhtml
@@ -9,7 +9,7 @@
 <body> 
 	Sejam bem vindos ao sistema <br /><br />
 	<h:form>
-<<<<<<< HEAD
+		<h:commandLink action="#{controleLogin.paginaLogin()}" value="Login" />
 		<h:panelGroup rendered="#{controleLogin.usuarioLogado != null}">
 			<h:panelGrid columns="1" title="Menu">
 				<h:outputLabel value="Usuario Logado: #{controleLogin.usuarioLogado.nome}" />
@@ -23,21 +23,6 @@
 		
 		<h:panelGroup rendered="#{controleLogin.usuarioLogado == null}">
 			<h:commandLink action="#{controleLogin.paginaLogin()}" value="Login" />
-=======
-		<h:panelGroup rendered="#{controleLoginBean.usuarioLogado != null}">
-			<h:panelGrid columns="1" title="Menu">
-				<h:outputLabel value="Usuario Logado: #{controleLoginBean.usuarioLogado.nome}" />
-				<h:commandLink action="#{controleGrupo.listar()}" value="Grupos" />
-				<h:commandLink action="#{controleFuncionario.listar()}" value="Funcionarios" />
-				<h:commandLink action="#{controleProjeto.listar()}" value="Projetos" />
-				<h:commandLink action="#{controleSetor.listar()}" value="Setores" />
-				<h:commandLink action="#{controleLoginBean.efetuarLogout()}" value="Sair" />
-			</h:panelGrid>
-		</h:panelGroup>
-		
-		<h:panelGroup rendered="#{controleLoginBean.usuarioLogado == null}">
-			<h:commandLink action="#{controleLoginBean.paginaLogin()}" value="Login" />
->>>>>>> branch 'master' of https://github.com/egilakaren/dev-jsf.git
 		</h:panelGroup>
 	</h:form>
 </body> 
